crates/lang/macro/tests/ui/contract/fail/constructor-async.stderr
error: ink! constructors must not be async
  --> tests/ui/contract/fail/constructor-async.rs:10:13
   |
10 |         pub async fn constructor() -> Self {
   |             ^^^^^
